2700. Про внесення змін до статті 23 Митного кодексу України щодо попередніх рішень з питань відповідного методу або критеріїв та їх застосування, які будуть використовуватися для визначення митної вартості відповідно до конкретних обставин

--- a/Кодекси/Митний_кодекс_України/Митний_кодекс_України_1.md
+++ b/Кодекси/Митний_кодекс_України/Митний_кодекс_України_1.md
@@ -937,11 +937,15 @@
 
     3) надання у випадках, передбачених цим Кодексом, дозволу на поміщення товарів в окремі митні режими.
 
-5. Строк прийняття попередніх рішень з питань класифікації товарів згідно з УКТ ЗЕД та надання дозволу на поміщення товарів в окремі митні режими становить 30 днів з дня отримання органом доходів і зборів відповідного звернення. Цей строк може бути продовжений керівником органу доходів і зборів або уповноваженою ним особою, але не більше, ніж на 15 днів, про що повідомляється особі, яка подала звернення. Попереднє рішення про визначення країни походження товару приймається в строк, що не перевищує 150 днів з дня отримання органом доходів і зборів відповідного звернення за умови, що декларантом або уповноваженою ним особою повідомлено всі необхідні для прийняття такого рішення дані про товар.
+    4) відповідного методу або критеріїв та їх застосування, які будуть використовуватися для визначення митної вартості відповідно до конкретних обставин.
 
-6. Строк дії попереднього рішення становить три роки з дати його винесення, якщо факти та умови (у тому числі правила визначення походження товарів), на основі яких було прийнято це рішення, залишатимуться незмінними.
+5. Строк прийняття попередніх рішень з питань класифікації товарів згідно з УКТ ЗЕД та надання дозволу на поміщення товарів в окремі митні режими та з питань відповідного методу або критеріїв та їх застосування, які будуть використовуватися для визначення митної вартості відповідно до конкретних обставин становить 30 днів з дня отримання органом доходів і зборів відповідного звернення. Цей строк може бути продовжений керівником органу доходів і зборів або уповноваженою ним особою, але не більше, ніж на 15 днів, про що повідомляється особі, яка подала звернення. Попереднє рішення про визначення країни походження товару приймається в строк, що не перевищує 150 днів з дня отримання органом доходів і зборів відповідного звернення за умови, що декларантом або уповноваженою ним особою повідомлено всі необхідні для прийняття такого рішення дані про товар.
 
-7. Орган доходів і зборів, який прийняв попереднє рішення, може його відкликати. Попереднє рішення підлягає відкликанню, якщо воно:
+6. Строк дії попереднього рішення, крім попередніх рішень з відповідного методу або критеріїв та їх застосування, які будуть використовуватися для визначення митної вартості відповідно до конкретних обставин, становить три роки з дати його винесення, якщо факти та умови (у тому числі правила визначення походження товарів), на основі яких було прийнято це рішення, залишатимуться незмінними.
+
+7. Строк дії попереднього рішення з питань відповідного методу або критеріїв та їх застосування, які будуть використовуватися для визначення митної вартості відповідно до конкретних обставин, становить три місяці з дати його винесення, якщо факти та умови, на основі яких було прийнято це рішення, залишатимуться незмінними.
+
+8. Орган доходів і зборів, який прийняв попереднє рішення, може його відкликати. Попереднє рішення підлягає відкликанню, якщо воно:
 
     1) було прийняте на підставі поданих заявником недостовірних документів, наданої ним недостовірної інформації, та/або внаслідок ненадання підприємством всієї наявної у нього інформації, необхідної для прийняття зазначеного рішення, що суттєво вплинуло на характер цього рішення;
 
@@ -949,15 +953,15 @@
 
     3) прийняте з порушенням вимог цього Кодексу.
 
-8. Якщо попереднє рішення відкликано органом доходів і зборів з причини, зазначеної у пункті 1 частини сьомої цієї статті, декларант або уповноважена ним особа несе передбачену цим Кодексом та іншими законами України відповідальність за негативні наслідки застосування такого рішення з моменту його прийняття.
+9. Якщо попереднє рішення відкликано органом доходів і зборів з причини, зазначеної у пункті 1 частини сьомої цієї статті, декларант або уповноважена ним особа несе передбачену цим Кодексом та іншими законами України відповідальність за негативні наслідки застосування такого рішення з моменту його прийняття.
 
-9. Якщо попереднє рішення відкликано органом доходів і зборів з причин, зазначених у пунктах 2 і 3 частини сьомої цієї статті, декларант або уповноважена ним особа не несе відповідальності за негативні наслідки застосування такого рішення з моменту його прийняття і до моменту його відкликання.
+10. Якщо попереднє рішення відкликано органом доходів і зборів з причин, зазначених у пунктах 2 і 3 частини сьомої цієї статті, декларант або уповноважена ним особа не несе відповідальності за негативні наслідки застосування такого рішення з моменту його прийняття і до моменту його відкликання.
 
-10. Попереднє рішення вважається відкликаним з дня прийняття рішення про його відкликання. Письмове повідомлення про відкликання негайно направляється особі, за зверненням якої воно було прийняте.
+11. Попереднє рішення вважається відкликаним з дня прийняття рішення про його відкликання. Письмове повідомлення про відкликання негайно направляється особі, за зверненням якої воно було прийняте.
 
-11. За необхідності внесення змін до попереднього рішення таке рішення відкликається, а на його заміну приймається нове з обов’язковим посиланням у ньому на відкликане рішення та зазначенням причин його відкликання. Нове попереднє рішення не пізніше наступного робочого дня після його прийняття надсилається особі, за зверненням якої було прийнято відкликане рішення.
+12. За необхідності внесення змін до попереднього рішення таке рішення відкликається, а на його заміну приймається нове з обов’язковим посиланням у ньому на відкликане рішення та зазначенням причин його відкликання. Нове попереднє рішення не пізніше наступного робочого дня після його прийняття надсилається особі, за зверненням якої було прийнято відкликане рішення.
 
-12. Попередні рішення, за винятком інформації, що є конфіденційною відповідно до цього Кодексу, є загальнодоступними та оприлюднюються центральним органом виконавчої влади, що реалізує державну митну політику.
+13. Попередні рішення, за винятком інформації, що є конфіденційною відповідно до цього Кодексу, є загальнодоступними та оприлюднюються центральним органом виконавчої влади, що реалізує державну митну політику.
 
 ### Глава 4. Оскарження рішень, дій або бездіяльності органів доходів і зборів, їх посадових осіб та інших працівників і відповідальність за них
 
