2790. Про внесення змін до Закону України "Про збір та облік єдиного внеску на загальнообов'язкове державне соціальне страхування"

--- a/Закони/Про_збір_та_облік_єдиного_внеску_на_загальнообов'язкове_державне_соціальне_страхування.md
+++ b/Закони/Про_збір_та_облік_єдиного_внеску_на_загальнообов'язкове_державне_соціальне_страхування.md
@@ -112,6 +112,7 @@
 
         * інвестор (оператор) за угодою про розподіл продукції (у тому числі постійне представництво інвестора-нерезидента), що використовує працю фізичних осіб, найнятих на роботу в Україні на умовах трудового договору (контракту) або на інших умовах, передбачених законодавством, чи за цивільно-правовими договорами (крім цивільно-правового договору, укладеного з фізичною особою - підприємцем в Україні, якщо виконувані роботи (надавані послуги) відповідають видам діяльності, зазначеним у витягу з Єдиного державного реєстру юридичних осіб та фізичних осіб - підприємців);
 
+        * підприємства, установи та організації, інші юридичні особи, утворені відповідно до законодавства України, незалежно від форми власності, виду діяльності та господарювання, а також фізичні особи — підприємці, що використовують працю засуджених до обмеження волі або позбавлення волі.
     2) \-
 
     3) \-
@@ -154,13 +155,13 @@
 
 Взяття на облік осіб, зазначених:
 
-* в абзацах другому, третьому, п'ятому та сьомому пункту 1 частини першої статті 4 цього Закону, на яких поширюється дія Закону України "Про державну реєстрацію юридичних осіб та фізичних осіб - підприємців", - здійснюється на підставі відомостей з реєстраційної картки, наданих державним реєстратором згідно із Законом України "Про державну реєстрацію юридичних осіб та фізичних осіб - підприємців", не пізніше наступного робочого дня з дня отримання зазначених відомостей;
+* в абзацах другому, третьому, п’ятому, сьомому та п’ятнадцятому пункту 1 частини першої статті 4 цього Закону, на яких поширюється дія Закону України "Про державну реєстрацію юридичних осіб та фізичних осіб - підприємців", - здійснюється на підставі відомостей з реєстраційної картки, наданих державним реєстратором згідно із Законом України "Про державну реєстрацію юридичних осіб та фізичних осіб - підприємців", не пізніше наступного робочого дня з дня отримання зазначених відомостей;
 
 * в абзацах четвертому, шостому та сьомому пункту 1 частини першої статті 4 цього Закону, на яких не поширюється дія Закону України "Про державну реєстрацію юридичних осіб та фізичних осіб - підприємців", - здійснюється не пізніше наступного робочого дня з дня отримання від них відповідної заяви;
 
 * в абзаці восьмому пункту 1 частини першої статті 4 цього Закону - здійснюється на підставі подання копії свідоцтва про державну реєстрацію угоди про розподіл продукції не пізніше наступного робочого дня з дня отримання від них відповідної заяви.
 
-Зняття з обліку платників єдиного внеску, зазначених в абзацах другому, п'ятому та сьомому пункту 1 та пункті 4 частини першої статті 4 цього Закону, здійснюється органами доходів і зборів на підставі відомостей з реєстраційної картки, наданих державним реєстратором, платників єдиного внеску - фізичних осіб - підприємців, - на підставі відомостей з реєстраційної картки, наданих державним реєстратором, після проведення передбачених законодавством перевірок платників та проведення остаточного розрахунку, а платників єдиного внеску, зазначених в абзаці шостому пункту 1 та пункті 5 частини першої статті 4 цього Закону, на яких не поширюється дія Закону України "Про державну реєстрацію юридичних осіб та фізичних осіб - підприємців", - за їхньою заявою після проведення передбачених законодавством перевірок платників, звірення розрахунків та проведення остаточного розрахунку, а платників єдиного внеску, зазначених в абзаці восьмому пункту 1 частини першої статті 4 цього Закону, - за їхньою заявою.
+Зняття з обліку платників єдиного внеску, зазначених в абзацах другому, п’ятому, сьомому та п’ятнадцятому пункту 1 та пункті 4 частини першої статті 4 цього Закону, здійснюється органами доходів і зборів на підставі відомостей з реєстраційної картки, наданих державним реєстратором, платників єдиного внеску - фізичних осіб - підприємців, - на підставі відомостей з реєстраційної картки, наданих державним реєстратором, після проведення передбачених законодавством перевірок платників та проведення остаточного розрахунку, а платників єдиного внеску, зазначених в абзаці шостому пункту 1 та пункті 5 частини першої статті 4 цього Закону, на яких не поширюється дія Закону України "Про державну реєстрацію юридичних осіб та фізичних осіб - підприємців", - за їхньою заявою після проведення передбачених законодавством перевірок платників, звірення розрахунків та проведення остаточного розрахунку, а платників єдиного внеску, зазначених в абзаці восьмому пункту 1 частини першої статті 4 цього Закону, - за їхньою заявою.
 
 Органи доходів і зборів повідомляють Пенсійний фонд про взяття на облік платників єдиного внеску із зазначенням органу доходів і зборів, в якому взято на облік платника. Порядок здійснення такого повідомлення визначається центральним органом виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, за погодженням з Пенсійним фондом.
 
@@ -170,7 +171,7 @@
 
 4. Обов'язки платників єдиного внеску виникають:
 
-    * у осіб, зазначених в абзацах другому, третьому, п'ятому та сьомому пункту 1 частини першої статті 4 цього Закону, - з дня їх державної реєстрації відповідно до Закону України "Про державну реєстрацію юридичних осіб та фізичних осіб - підприємців";
+    * у осіб, зазначених в абзацах другому, третьому, п’ятому, сьомому та п’ятнадцятому пункту 1 частини першої статті 4 цього Закону, - з дня їх державної реєстрації відповідно до Закону України "Про державну реєстрацію юридичних осіб та фізичних осіб - підприємців";
 
     * у осіб, зазначених в абзацах четвертому, шостому та сьомому пункту 1, пунктах 4 (крім фізичних осіб - підприємців), 5 та 5-1 частини першої статті 4 цього Закону, - з початку провадження відповідної діяльності;
 
@@ -231,7 +232,9 @@
 
 1. Єдиний внесок нараховується:
 
-    1) для платників, зазначених у пунктах 1 (крім абзацу сьомого), частини першої статті 4 цього Закону, - на суму нарахованої кожній застрахованій особі заробітної плати за видами виплат, які включають основну та додаткову заробітну плату, інші заохочувальні та компенсаційні виплати, у тому числі в натуральній формі, що визначаються відповідно до Закону України "Про оплату праці", та суму винагороди фізичним особам за виконання робіт (надання послуг) за цивільно-правовими договорами;
+    1) для платників, зазначених у пунктах 1 (крім абзаців сьомого та п’ятнадцятого), частини першої статті 4 цього Закону, - на суму нарахованої кожній застрахованій особі заробітної плати за видами виплат, які включають основну та додаткову заробітну плату, інші заохочувальні та компенсаційні виплати, у тому числі в натуральній формі, що визначаються відповідно до Закону України "Про оплату праці", та суму винагороди фізичним особам за виконання робіт (надання послуг) за цивільно-правовими договорами;
+
+    для платників, зазначених в абзаці п’ятнадцятому пункту 1 частини першої статті 4 цього Закону, — на суму фактично нарахованої заробітної плати засуджених до обмеження волі або позбавлення волі.
 
     для платників, зазначених в абзаці сьомому пункту 1 частини першої статті 4 цього Закону, - на суму грошового забезпечення кожної застрахованої особи, оплати перших п'яти днів тимчасової непрацездатності, що здійснюється за рахунок коштів роботодавця, та допомоги по тимчасовій непрацездатності, допомоги у зв'язку з вагітністю та пологами; допомоги, надбавки або компенсації відповідно до законодавства.
 
@@ -275,7 +278,7 @@
 
 5. Єдиний внесок для платників, зазначених у статті 4 цього Закону, встановлюється у розмірі 22 відсотки до визначеної статтею 7 цього Закону бази нарахування єдиного внеску.
 
-У разі якщо база нарахування єдиного внеску не перевищує розміру мінімальної заробітної плати, встановленої законом на місяць, за який отримано дохід, сума єдиного внеску розраховується як добуток розміру мінімальної заробітної плати, встановленої законом на місяць, за який отримано дохід (прибуток), та ставки єдиного внеску.
+У разі якщо база нарахування єдиного внеску не перевищує розміру мінімальної заробітної плати, встановленої законом на місяць, за який отримано дохід, сума єдиного внеску розраховується як добуток розміру мінімальної заробітної плати, встановленої законом на місяць, за який отримано дохід (прибуток), та “(крім випадку, передбаченого абзацом третім пункту 1 частини першої статті 7 цього Закону).
 
 При нарахуванні заробітної плати (доходів) фізичним особам з джерел не за основним місцем роботи ставка єдиного внеску, встановлена цією частиною, застосовується до визначеної бази нарахування незалежно від її розміру.
 
