2794. Про внесення змін до Закону України "Про Кабінет Міністрів України" щодо Спеціальної контрольної комісії з питань приватизації

--- a/Закони/Про_Кабінет_Міністрів_України.md
+++ b/Закони/Про_Кабінет_Міністрів_України.md
@@ -613,9 +613,9 @@
 
 3. У разі обговорення відповіді на запит народного депутата України на пленарному засіданні Верховної Ради України на засідання можуть запрошуватися члени Кабінету Міністрів України, яким адресовано запит.
 
-**Стаття 34.** Розгляд звернень комітетів, Спеціальної контрольної комісії з питань приватизації, тимчасових спеціальних та тимчасових слідчих комісій Верховної Ради України
+**Стаття 34.** Розгляд звернень комітетів, тимчасових спеціальних та тимчасових слідчих комісій Верховної Ради України
 
-1. Кабінет Міністрів України організовує розгляд звернень комітетів, Спеціальної контрольної комісії з питань приватизації, тимчасових спеціальних та тимчасових слідчих комісій Верховної Ради України з питань його діяльності.
+1. Кабінет Міністрів України організовує розгляд звернень комітетів, тимчасових спеціальних та тимчасових слідчих комісій Верховної Ради України з питань його діяльності.
 
 2. Відповідь на звернення, зазначені в частині першій цієї статті, підписує Прем’єр-міністр України або інший член Кабінету Міністрів України, якому адресовано звернення.
 
@@ -625,7 +625,7 @@
 
 2. У проведенні "Години запитань до Уряду" у Верховній Раді України бере участь Кабінет Міністрів України в повному складі, крім тих його членів, які не можуть бути присутніми з поважних причин.
 
-3. Під час проведення "Години запитань до Уряду" члени Кабінету Міністрів України відповідають на запитання народних депутатів України, комітетів Верховної Ради України, Спеціальної контрольної комісії з питань приватизації, тимчасових спеціальних та тимчасових слідчих комісій Верховної Ради України, представників депутатських фракцій. Народні депутати України, депутатські фракції можуть заздалегідь письмово повідомляти членів Кабінету Міністрів України про запитання, які їм буде поставлено.
+3. Під час проведення "Години запитань до Уряду" члени Кабінету Міністрів України відповідають на запитання народних депутатів України, комітетів Верховної Ради України, тимчасових спеціальних та тимчасових слідчих комісій Верховної Ради України, представників депутатських фракцій. Народні депутати України, депутатські фракції можуть заздалегідь письмово повідомляти членів Кабінету Міністрів України про запитання, які їм буде поставлено.
 
 4. Під час проведення "Години запитань до Уряду" порушуються лише питання, що належать до компетенції Кабінету Міністрів України та центральних органів виконавчої влади.
 
