2795. Про внесення змін до деяких законодавчих актів у сфері державного регулювання оплати праці в публічному секторі

--- a/Закони/Про_оплату_праці.md
+++ b/Закони/Про_оплату_праці.md
@@ -81,7 +81,7 @@
 
 Схема посадових окладів (тарифних ставок) працівників установ, закладів та організацій, що фінансуються з бюджету, формується на основі:
 
-* мінімального розміру посадового окладу (тарифної ставки), встановленого Кабінетом Міністрів України;
+* Мінімальний посадовий оклад (тарифна ставка) встановлюється у розмірі, не меншому за мінімальну заробітну плату, встановлену для працездатних осіб на 1 січня календарного року;
 
 * міжпосадових (міжкваліфікаційних) співвідношень розмірів посадових окладів (тарифних ставок) і тарифних коефіцієнтів.
 
@@ -106,9 +106,9 @@
 
 **Стаття 8.** Сфера державного регулювання оплати праці
 
-Держава здійснює регулювання оплати праці працівників підприємств усіх форм власності шляхом встановлення розміру мінімальної заробітної плати та інших державних норм і гарантій, встановлення умов і розмірів оплати праці керівників підприємств, заснованих на державній, комунальній власності, працівників підприємств, установ та організацій, що фінансуються чи дотуються з бюджету, а також шляхом оподаткування доходів працівників.
+Держава здійснює регулювання оплати праці працівників підприємств усіх форм власності шляхом встановлення розміру мінімальної заробітної плати та інших державних норм і гарантій, встановлення умов і максимальних та мінімальних розмірів оплати праці керівників підприємств, заснованих на державній, комунальній власності, об’єднань державних підприємств, зокрема національних акціонерних компаній та державних акціонерних товариств, керівників органів державної влади та виборних органів, працівників підприємств, установ та організацій, що фінансуються чи дотуються з бюджету, а також шляхом оподаткування доходів працівників.
 
-Умови розміру оплати праці працівників установ та організацій, що фінансуються з бюджету, визначаються Кабінетом Міністрів України, крім випадків, передбачених частиною третьою цієї статті, та частиною першою статті 10 цього Закону.
+Умови розміру оплати праці працівників установ та організацій, що фінансуються з бюджету, визначаються Кабінетом Міністрів України, а максимально допустимий розмір виплат особам, уповноваженим на виконання функцій держави або місцевого самоврядування,  керівникам установ та організацій, що фінансуються з бюджету, державного підприємства, що працюють на основі комерційного розрахунку, та об’єднань державних підприємств, зокрема національних акціонерних компаній та державних акціонерних товариств,  керівників органів державної влади та виборних органів не повинен перевищувати десяти мінімальних посадових окладів (ставок) працівника основної професії крім випадків, передбачених частиною першою статті 10 цього Закону.
 
 Умови розміру оплати праці суддів та членів національної комісії, що здійснює державне регулювання у сферах енергетики та комунальних послуг, працівників її центрального апарату і територіальних органів визначаються законом.
 
