2798. Про внесення змін до Закону України "Про оплату праці" щодо обмеження максимального розміру заробітної плати керівників і працівників підприємств державного сектору економіки, державних службовців і працівників установ та організацій, що фінансуються чи дотуються з бюджету

--- a/Закони/Про_оплату_праці.md
+++ b/Закони/Про_оплату_праці.md
@@ -152,6 +152,10 @@
 
 * розробляє та вносить у встановленому порядку пропозиції щодо визначення розміру мінімальної заробітної плати, робочого часу та часу відпочинку, умов оплати праці працівників підприємств, установ та організацій, що фінансуються чи дотуються з державного бюджету, грошового забезпечення військовослужбовців, осіб рядового і начальницького складу органів відповідно до закону.
 
+**Стаття 13-2.** Обмеження максимального розміру заробітної плати керівників і працівників підприємств державного сектору економіки, державних службовців і працівників установ та організацій, що фінансуються чи дотуються з бюджету
+
+Максимальний розмір заробітної плати керівників і працівників підприємств державного сектору економіки, державних службовців і працівників установ та організацій, що фінансуються чи дотуються з бюджету, а також визначається відповідно до Митного кодексу України, законів України "Про державну службу", "Про прокуратуру", "Про статус народного депутата України", "Про Національний банк України", "Про Кабінет Міністрів України", "Про дипломатичну службу", "Про службу в органах місцевого самоврядування", "Про судову експертизу", "Про судоустрій і статус суддів", Постанови Верховної Ради України від 13 жовтня 1995 року "Про затвердження Положення про помічника-консультанта народного депутата України", не може перевищувати десяти мінімальних заробітних плат.
+
 ## Розділ III
 ## ДОГОВІРНЕ РЕГУЛЮВАННЯ ОПЛАТИ ПРАЦІ
 
