2713-3 . Про внесення змін до Податкового кодексу України щодо оподаткування доходів від організації та проведення азартних ігор

--- a/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_14.md
+++ b/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_14.md
@@ -70,7 +70,7 @@
 
 291.5.1. суб'єкти господарювання (юридичні особи та фізичні особи - підприємці), які здійснюють:
 
-1) діяльність з організації, проведення азартних ігор, лотерей (крім розповсюдження лотерей), парі (букмекерське парі, парі тоталізатора);
+1) діяльність з організації та проведення азартних ігор, лотерей (крім розповсюдження лотерей);
 
 2) обмін іноземної валюти;
 
