--- a/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_3.md
+++ b/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_3.md
@@ -107,9 +107,9 @@
 
 134.1.3. дохід (прибуток) нерезидента, що підлягає оподаткуванню згідно з пунктом 141.4 статті 141 цього Кодексу, з джерелом походження з України;
 
-134.1.4. дохід суб’єктів, які здійснюють випуск та проведення лотерей, підлягає оподаткуванню згідно з пунктом 141.8 статті 141 цього Кодексу;
+134.1.4. \-
 
-134.1.5. дохід операторів, отриманий від букмекерської діяльності, азартних ігор (у тому числі казино), крім доходу, отриманого від азартних ігор з використанням гральних автоматів, зменшеного на суму виплачених виплат гравцю, що підлягає оподаткуванню згідно з пунктом 141.5 статті 141 цього Кодексу.
+134.1.5. \-
 
 **Стаття 135.** База оподаткування
 
@@ -127,15 +127,15 @@
 
 136.3. Ставки 0, 4, 6, 12, 15 і 20 відсотків застосовуються до доходів нерезидентів та прирівняних до них осіб із джерелом їх походження з України у випадках, встановлених пунктом 141.4 статті 141 цього Кодексу.
 
-136.4. Під час провадження букмекерської діяльності, азартних ігор (у тому числі казино) одночасно із ставкою податку на прибуток, визначеною у пункті 136.1 цієї статті, ставка податку на дохід встановлюється у розмірі:
+136.4. \-
 
-136.4.1. 10 відсотків від доходу, отриманого від азартних ігор з використанням гральних автоматів;
+136.4.1. \-
 
-136.4.2. 18 відсотків від доходу, отриманого від букмекерської діяльності, азартних ігор (у тому числі казино), крім доходу, отриманого від азартних ігор з використанням гральних автоматів, зменшеного на суму виплачених виплат гравцю.
+136.4.2. \-
 
 136.5. Податок на дохід, визначений як об’єкт оподаткування у підпунктах 134.1.2, 134.1.4, 134.1.5 пункту 134.1 статті 134 цього Кодексу, є частиною податку на прибуток.
 
-136.6. Під час провадження діяльності з випуску та проведення лотерей встановлюється ставка податку на дохід від суми доходів, визначених підпунктом 134.1.4 пункту 134.1 статті 134 цього Кодексу, у розмірі 30 відсотків з урахуванням положень пункту 47 підрозділу 4 розділу XX цього Кодексу.
+136.6. \-
 
 **Стаття 137.** Порядок обчислення податку на прибуток підприємств та сплати
 
@@ -167,7 +167,7 @@
 
 137.7. Нерезидент щороку може отримувати від контролюючого органу підтвердження українською мовою щодо сплати податку.
 
-137.8. Платники податку на дохід: суб’єкти, які здійснюють випуск та проведення лотерей, щоквартально сплачують податок на дохід у порядку і в строки, які встановлені для квартального податкового (звітного) періоду з поданням податкової декларації з податку на прибуток.
+137.8. \-
 
 **Стаття 138.** Різниці, які виникають при нарахуванні амортизації необоротних активів
 
@@ -565,7 +565,7 @@
 
 и) внески та премії на страхування або перестрахування ризиків в Україні (у тому числі страхування ризиків життя) або страхування резидентів від ризиків за межами України;
 
-і) доходи, одержані від діяльності у сфері розваг (крім діяльності з проведення лотереї);
+і) доходи, одержані від діяльності у сфері розваг;
 
 ї) доходи у вигляді благодійних внесків та пожертвувань на користь нерезидентів;
 
@@ -639,11 +639,9 @@
 
 в) нерезидент, якому виплачуються проценти, та/або уповноважена ним особа (якщо проценти виплачуються через таку особу) не є резидентами юрисдикцій, які на дату розміщення нерезидентом іноземних боргових цінних паперів включені до переліку держав (територій), затвердженого Кабінетом Міністрів України відповідно до підпункту 39.2.1.2 підпункту 39.2.1 пункту 39.2 статті 39 цього Кодексу.
 
-141.5. Особливості оподаткування букмекерської діяльності, азартних ігор (у тому числі казино)
+141.5. \-
 
-141.5.1. Суб’єкти, що здійснюють букмекерську діяльність, азартних ігор (у тому числі казино) одночасно з податком на прибуток за ставкою, визначеною у пункті 136.1 статті 136 цього Кодексу, сплачують податок на дохід за ставками, визначеними у підпунктах 136.4.1, 136.4.2 пункту 136.4 статті 136 цього Кодексу.
-
-Нарахований суб’єктом, що здійснює букмекерську діяльність, організацію та проведення азартних ігор (у тому числі казино), податок на дохід за ставками, визначеними в підпунктах 136.4.1, 136.4.2 пункту 136.4 статті 136 цього Кодексу, не є різницею та не зменшує фінансовий результат до оподаткування такого суб’єкта.
+141.5.1. \-
 
 141.6. Особливості оподаткування інститутів спільного інвестування та суб’єктів недержавного пенсійного забезпечення
 
@@ -653,13 +651,7 @@
 
 141.7 \-
 
-141.8. Особливості оподаткування суб’єктів, які здійснюють випуск та проведення лотерей.
-
-Дохід суб’єктів, які здійснюють випуск та проведення лотерей, від операцій з випуску та проведення лотерей підлягає оподаткуванню за ставкою, визначеною у пункті 136.6 статті 136 цього Кодексу.
-
-Прибуток суб’єктів, що здійснюють випуск та проведення лотерей, від здійснення іншої діяльності, яка не пов’язана із випуском та проведенням лотерей, нараховується та сплачується за правилами цього розділу за базовою (основною) ставкою податку.
-
-Нарахований суб’єктами, що здійснюють випуск та проведення лотерей, податок на дохід за ставкою, визначеною в пункті 136.6 статті 136 цього Кодексу, не є різницею та не зменшує фінансовий результат до оподаткування такого суб’єкта.
+141.8. \-
 
 **Стаття 142.** Звільнення від оподаткування
 
