--- a/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_4.md
+++ b/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_4.md
@@ -67,7 +67,7 @@
 
 164.2.7. сума заборгованості платника податку за укладеним ним цивільно-правовим договором, за якою минув строк позовної давності та яка перевищує суму, що становить 50 відсотків місячного прожиткового мінімуму, діючого для працездатної особи на 1 січня звітного податкового року, крім сум податкової заборгованості, за якими минув строк позовної давності згідно з розділом II цього Кодексу, що встановлює порядок стягнення заборгованості з податків, зборів і погашення податкового боргу. Фізична особа самостійно сплачує податок з таких доходів та зазначає їх у річній податковій декларації;
 
-164.2.8. пасивні доходи (крім зазначених у підпунктах 165.1.2 та 165.1.41 пункту 165.1 статті 165 цього Кодексу), доходи у вигляді виграшів, призів;
+164.2.8. пасивні доходи (крім зазначених у підпунктах 165.1.2 та 165.1.41 пункту 165.1 статті 165 цього Кодексу), доходи у вигляді виграшів, призів, крім виграшів в азартних іграх;
 
 164.2.9. інвестиційний прибуток від проведення платником податку операцій з цінними паперами, деривативами та корпоративними правами, випущеними в інших, ніж цінні папери, формах, крім доходу від операцій, зазначених у підпунктах 165.1.40 і 165.1.52 пункту 165.1 статті 165 цього Кодексу;
 
@@ -398,6 +398,8 @@
 165.1.58. сума коштів, яка надається у порядку, встановленому Кабінетом Міністрів України, платнику податку іншою, ніж зазначена у підпункті 165.1.57. цього пункту, фінансовою організацією чи фондом, що займається фінансуванням програм розвитку, у зв’язку із здійсненням заходів щодо енергоефективності та енергозбереження в рамках реалізації в Україні проектів такої організації чи фонду (як безпосередньо, так і через уповноважені банки або іншим способом, передбаченим відповідним проектом такої організації чи фонду);
 
 165.1.59. сума, прощена (анульована) кредитором у порядку, передбаченому законом щодо реструктуризації зобов’язань громадян України за кредитами в іноземній валюті, що отримані на придбання єдиного житла (іпотечні кредити).
+
+165.1.60. сума виграшів в азартних іграх.
 
 **Стаття 166.** Податкова знижка
 
@@ -795,17 +797,15 @@
 
 170.6. Оподаткування виграшів та призів
 
-170.6.1. Податковим агентом платника податку під час нарахування (виплати, надання) на його користь доходу у вигляді виграшів (призів) у лотерею чи в інші розіграші, у букмекерському парі, у парі тоталізатора, призів та виграшів у грошовій формі, одержаних за перемогу та/або участь в аматорських спортивних змаганнях, у тому числі у більярдному спорті, є особа, яка здійснює таке нарахування (виплату).
+170.6.1. Податковим агентом платника податку під час нарахування (виплати, надання) на його користь доходу у вигляді призів у грошовій формі, одержаних за перемогу та/або участь в аматорських спортивних змаганнях, у тому числі у більярдному спорті, є особа, яка здійснює таке нарахування (виплату).
 
-170.6.2. Податковим агентом - оператором лотереї у строки, визначені цим Кодексом для місячного податкового періоду, до бюджету сплачується (перераховується) загальна сума податку, нарахованого за ставкою, визначеною пунктом 167.1 статті 167 цього Кодексу, із загальної суми виграшів (призів), виплачених за податковий (звітний) місяць гравцям у лотерею.
+170.6.2.\-
 
-Податкові агенти - оператори лотереї у податковому розрахунку, подання якого передбачено підпунктом "б" пункту 176.2 статті 176 цього Кодексу, відображають загальну суму нарахованих (виплачених) у звітному податковому періоді доходів у вигляді виграшів (призів) та загальну суму утриманого з них податку. При цьому у податковому розрахунку не зазначається інформація про суми окремого виграшу, суми нарахованого на нього податку, а також відомості про фізичну особу - платника податку, яка одержала дохід у вигляді виграшу (призу).
+170.6.3. Оподаткування доходів у вигляді виграшів, інших ніж виграші в азартних іграх та лотереях, здійснюється у загальному порядку, встановленому цим Кодексом для доходів, що остаточно оподатковуються під час їх нарахування, за ставкою, визначеною в абзаці першому пункту 167.1 статті 167 цього Кодексу.
 
-170.6.3. Оподаткування доходів у вигляді виграшів та призів, інших, ніж виграш (приз) у лотерею, здійснюється у загальному порядку, встановленому цим Кодексом для доходів, що остаточно оподатковуються під час їх нарахування, за ставкою, визначеною в абзаці першому пункту 167.1 статті 167 цього Кодексу.
+170.6.4. Під час нарахування (виплати) доходів, порядок оподаткування яких встановлено підпунктом 170.6.3 цього пункту, витрати платника податку у зв’язку з отриманням такого доходу (у тому числі по’вязані з придбанням права на участь у розіграшах, змаганнях) не враховуються.
 
-170.6.4. Під час нарахування (виплати) доходів у вигляді виграшів у лотерею або в інших розіграшах, які передбачають попереднє придбання платником податку права на участь у таких лотереях чи розіграшах, не беруться до уваги витрати платника податку у зв’язку з отриманням такого доходу.
-
-170.6.5. Доходи, зазначені у цьому пункті, остаточно оподатковуються під час їх виплати за їх рахунок.
+170.6.5. Доходи, зазначені у цьому пункті, крім виграшів в азартні ігри та у лотереї остаточно оподатковуються під час їх виплати за їх рахунок.
 
 170.7. Оподаткування благодійної допомоги.
 
