--- a/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_5.md
+++ b/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_5.md
@@ -975,7 +975,7 @@
 
 197.5. Звільнення від оподаткування, передбачене пунктом 197.1 цієї статті, не поширюється на операції з підакцизними товарами, зазначеними в розділі VI цього Кодексу.
 
-197.6. Звільняються від оподаткування операції з постачання товарів (крім підакцизних товарів) та послуг (крім послуг, що надаються під час проведення лотерей і розважальних ігор та послуг з постачання товарів, отриманих у межах договорів комісії (консигнації), поруки, доручення, довірчого управління, інших цивільно-правових договорів, що уповноважують такого платника податку здійснювати постачання товарів від імені та за дорученням іншої особи без передачі права власності на такі товари), що безпосередньо виготовляються підприємствами та організаціями, які засновані громадськими об’єднаннями осіб з інвалідністю, де кількість осіб з інвалідністю, які мають у таких організаціях основне місце роботи, становить протягом попереднього звітного періоду не менш як 50 відсотків середньооблікової кількості штатних працівників, і за умови, що фонд оплати праці таких осіб з інвалідністю становить протягом звітного періоду не менш як 25 відсотків суми загальних витрат з оплати праці, що належать до складу витрат згідно з правилами оподаткування податком на прибуток підприємств.
+197.6. Звільняються від оподаткування операції з постачання товарів (крім підакцизних товарів) та послуг (крім послуг, що надаються під час проведення азартних ігор та лотерей і розважальних ігор та послуг з постачання товарів, отриманих у межах договорів комісії (консигнації), поруки, доручення, довірчого управління, інших цивільно-правових договорів, що уповноважують такого платника податку здійснювати постачання товарів від імені та за дорученням іншої особи без передачі права власності на такі товари), що безпосередньо виготовляються підприємствами та організаціями, які засновані громадськими об’єднаннями осіб з інвалідністю, де кількість осіб з інвалідністю, які мають у таких організаціях основне місце роботи, становить протягом попереднього звітного періоду не менш як 50 відсотків середньооблікової кількості штатних працівників, і за умови, що фонд оплати праці таких осіб з інвалідністю становить протягом звітного періоду не менш як 25 відсотків суми загальних витрат з оплати праці, що належать до складу витрат згідно з правилами оподаткування податком на прибуток підприємств.
 
 Безпосереднім вважається виготовлення товарів/послуг, у результаті якого сума витрат з переробки (обробка, інші види перетворення) сировини, комплектувальних виробів, складових частин, інших покупних товарів/послуг, які використовуються при виготовлені таких товарів/послуг, становить не менш як 8 відсотків ціни постачання таких виготовлених товарів/послуг.
 
